--- a/less/header.less
+++ b/less/header.less
@@ -34,6 +34,7 @@
     right: 0;
     opacity: .8;
     z-index: 1;
+    overflow-y: unset;
   }
 
   .primary-nav {
